--- a/CreateAppShapefiles/App2ShapeFiles_County.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_County.ipynb
@@ -65,32 +65,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>254</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>Curlew Valley</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20733</td>\n",
+       "      <td>NM_C_1</td>\n",
+       "      <td>35001</td>\n",
+       "      <td>Bernalillo</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>255</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>Clear Creek</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20734</td>\n",
+       "      <td>NM_C_2</td>\n",
+       "      <td>35003</td>\n",
+       "      <td>Catron</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>256</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>Promontory Point</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20735</td>\n",
+       "      <td>NM_C_3</td>\n",
+       "      <td>35005</td>\n",
+       "      <td>Chaves</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -99,14 +99,14 @@
       ],
       "text/plain": [
        "   ReportingUnitID ReportingUnitUUID ReportingUnitNativeID ReportingUnitName  \\\n",
-       "0              254          00-01-03              00-01-03     Curlew Valley   \n",
-       "1              255         000-01-03             000-01-03       Clear Creek   \n",
-       "2              256          00-07-02              00-07-02  Promontory Point   \n",
+       "0            20733            NM_C_1                 35001        Bernalillo   \n",
+       "1            20734            NM_C_2                 35003            Catron   \n",
+       "2            20735            NM_C_3                 35005            Chaves   \n",
        "\n",
        "  ReportingUnitTypeCV StateCV EPSGCodeCV  \n",
-       "0             Subarea      UT  EPSG:4326  \n",
-       "1             Subarea      UT  EPSG:4326  \n",
-       "2             Subarea      UT  EPSG:4326  "
+       "0              County      NM  EPSG:4326  \n",
+       "1              County      NM  EPSG:4326  \n",
+       "2              County      NM  EPSG:4326  "
       ]
      },
      "execution_count": 2,
@@ -282,8 +282,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>468</td>\n",
-       "      <td>49001</td>\n",
+       "      <td>24128</td>\n",
+       "      <td>UTag_RU1</td>\n",
        "      <td>49001</td>\n",
        "      <td>Beaver</td>\n",
        "      <td>County</td>\n",
@@ -296,8 +296,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>469</td>\n",
-       "      <td>49003</td>\n",
+       "      <td>24129</td>\n",
+       "      <td>UTag_RU2</td>\n",
        "      <td>49003</td>\n",
        "      <td>Box Elder</td>\n",
        "      <td>County</td>\n",
@@ -310,8 +310,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>474</td>\n",
-       "      <td>49013</td>\n",
+       "      <td>24151</td>\n",
+       "      <td>UTag_RU24</td>\n",
        "      <td>49013</td>\n",
        "      <td>Duchesne</td>\n",
        "      <td>County</td>\n",
@@ -326,9 +326,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon              468             49001                 49001   \n",
-       "1         1  Polygon              469             49003                 49003   \n",
-       "2         2  Polygon              474             49013                 49013   \n",
+       "0         0  Polygon            24128          UTag_RU1                 49001   \n",
+       "1         1  Polygon            24129          UTag_RU2                 49003   \n",
+       "2         2  Polygon            24151         UTag_RU24                 49013   \n",
        "\n",
        "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
        "0            Beaver              County      UT      4.225326    0.690759   \n",
@@ -770,8 +770,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>468</td>\n",
-       "      <td>49001</td>\n",
+       "      <td>24128</td>\n",
+       "      <td>UTag_RU1</td>\n",
        "      <td>49001</td>\n",
        "      <td>Beaver</td>\n",
        "      <td>County</td>\n",
@@ -784,8 +784,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>469</td>\n",
-       "      <td>49003</td>\n",
+       "      <td>24129</td>\n",
+       "      <td>UTag_RU2</td>\n",
        "      <td>49003</td>\n",
        "      <td>Box Elder</td>\n",
        "      <td>County</td>\n",
@@ -798,8 +798,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>474</td>\n",
-       "      <td>49013</td>\n",
+       "      <td>24151</td>\n",
+       "      <td>UTag_RU24</td>\n",
        "      <td>49013</td>\n",
        "      <td>Duchesne</td>\n",
        "      <td>County</td>\n",
@@ -814,9 +814,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon              468             49001                 49001   \n",
-       "1         1  Polygon              469             49003                 49003   \n",
-       "2         2  Polygon              474             49013                 49013   \n",
+       "0         0  Polygon            24128          UTag_RU1                 49001   \n",
+       "1         1  Polygon            24129          UTag_RU2                 49003   \n",
+       "2         2  Polygon            24151         UTag_RU24                 49013   \n",
        "\n",
        "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
        "0            Beaver              County      UT      4.225326    0.690759   \n",
@@ -885,8 +885,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>468</td>\n",
-       "      <td>49001</td>\n",
+       "      <td>24128</td>\n",
+       "      <td>UTag_RU1</td>\n",
        "      <td>49001</td>\n",
        "      <td>Beaver</td>\n",
        "      <td>County</td>\n",
@@ -899,8 +899,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>469</td>\n",
-       "      <td>49003</td>\n",
+       "      <td>24129</td>\n",
+       "      <td>UTag_RU2</td>\n",
        "      <td>49003</td>\n",
        "      <td>Box Elder</td>\n",
        "      <td>County</td>\n",
@@ -913,8 +913,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>474</td>\n",
-       "      <td>49013</td>\n",
+       "      <td>24151</td>\n",
+       "      <td>UTag_RU24</td>\n",
        "      <td>49013</td>\n",
        "      <td>Duchesne</td>\n",
        "      <td>County</td>\n",
@@ -927,8 +927,8 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>475</td>\n",
-       "      <td>49015</td>\n",
+       "      <td>24152</td>\n",
+       "      <td>UTag_RU25</td>\n",
        "      <td>49015</td>\n",
        "      <td>Emery</td>\n",
        "      <td>County</td>\n",
@@ -941,8 +941,8 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>477</td>\n",
-       "      <td>49019</td>\n",
+       "      <td>24154</td>\n",
+       "      <td>UTag_RU27</td>\n",
        "      <td>49019</td>\n",
        "      <td>Grand</td>\n",
        "      <td>County</td>\n",
@@ -1042,11 +1042,11 @@
       ],
       "text/plain": [
        "     OBJECTID    Shape  ReportingUnitID ReportingUnitUUID  \\\n",
-       "0           0  Polygon              468             49001   \n",
-       "1           1  Polygon              469             49003   \n",
-       "2           2  Polygon              474             49013   \n",
-       "3           3  Polygon              475             49015   \n",
-       "4           4  Polygon              477             49019   \n",
+       "0           0  Polygon            24128          UTag_RU1   \n",
+       "1           1  Polygon            24129          UTag_RU2   \n",
+       "2           2  Polygon            24151         UTag_RU24   \n",
+       "3           3  Polygon            24152         UTag_RU25   \n",
+       "4           4  Polygon            24154         UTag_RU27   \n",
        "..        ...      ...              ...               ...   \n",
        "249       249  Polygon            22791          TX_48097   \n",
        "250       250  Polygon            22805          TX_48153   \n",
@@ -1164,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
