--- a/CreateAppShapefiles/App2ShapeFiles_Custom_C.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_Custom_C.ipynb
@@ -63,32 +63,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>254</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>Curlew Valley</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20733</td>\n",
+       "      <td>NM_C_1</td>\n",
+       "      <td>35001</td>\n",
+       "      <td>Bernalillo</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>255</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>Clear Creek</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20734</td>\n",
+       "      <td>NM_C_2</td>\n",
+       "      <td>35003</td>\n",
+       "      <td>Catron</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>256</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>Promontory Point</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20735</td>\n",
+       "      <td>NM_C_3</td>\n",
+       "      <td>35005</td>\n",
+       "      <td>Chaves</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -97,14 +97,14 @@
       ],
       "text/plain": [
        "   ReportingUnitID ReportingUnitUUID ReportingUnitNativeID ReportingUnitName  \\\n",
-       "0              254          00-01-03              00-01-03     Curlew Valley   \n",
-       "1              255         000-01-03             000-01-03       Clear Creek   \n",
-       "2              256          00-07-02              00-07-02  Promontory Point   \n",
+       "0            20733            NM_C_1                 35001        Bernalillo   \n",
+       "1            20734            NM_C_2                 35003            Catron   \n",
+       "2            20735            NM_C_3                 35005            Chaves   \n",
        "\n",
        "  ReportingUnitTypeCV StateCV EPSGCodeCV  \n",
-       "0             Subarea      UT  EPSG:4326  \n",
-       "1             Subarea      UT  EPSG:4326  \n",
-       "2             Subarea      UT  EPSG:4326  "
+       "0              County      NM  EPSG:4326  \n",
+       "1              County      NM  EPSG:4326  \n",
+       "2              County      NM  EPSG:4326  "
       ]
      },
      "execution_count": 2,
@@ -249,7 +249,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23633</td>\n",
+       "      <td>24417</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -261,7 +261,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23634</td>\n",
+       "      <td>24418</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -273,7 +273,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23635</td>\n",
+       "      <td>24419</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -287,9 +287,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            23633         CAag_RU57                     3   \n",
-       "1         1  Polygon            23634         CAag_RU58                    10   \n",
-       "2         2  Polygon            23635         CAag_RU59                     1   \n",
+       "0         0  Polygon            24417         CAag_RU57                     3   \n",
+       "1         1  Polygon            24418         CAag_RU58                    10   \n",
+       "2         2  Polygon            24419         CAag_RU59                     1   \n",
        "\n",
        "  ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
        "0     Central Coast   Hydrologic Region      CA   \n",
@@ -392,7 +392,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23633</td>\n",
+       "      <td>24417</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -404,7 +404,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23634</td>\n",
+       "      <td>24418</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -416,7 +416,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23635</td>\n",
+       "      <td>24419</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -430,9 +430,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            23633         CAag_RU57                     3   \n",
-       "1         1  Polygon            23634         CAag_RU58                    10   \n",
-       "2         2  Polygon            23635         CAag_RU59                     1   \n",
+       "0         0  Polygon            24417         CAag_RU57                     3   \n",
+       "1         1  Polygon            24418         CAag_RU58                    10   \n",
+       "2         2  Polygon            24419         CAag_RU59                     1   \n",
        "\n",
        "  ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
        "0     Central Coast   Hydrologic Region      CA   \n",
@@ -499,7 +499,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23633</td>\n",
+       "      <td>24417</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -511,7 +511,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23634</td>\n",
+       "      <td>24418</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -523,7 +523,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23635</td>\n",
+       "      <td>24419</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -535,7 +535,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23636</td>\n",
+       "      <td>24420</td>\n",
        "      <td>CAag_RU60</td>\n",
        "      <td>8</td>\n",
        "      <td>North Lahontan</td>\n",
@@ -547,7 +547,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23637</td>\n",
+       "      <td>24421</td>\n",
        "      <td>CAag_RU61</td>\n",
        "      <td>5</td>\n",
        "      <td>Sacramento River</td>\n",
@@ -559,7 +559,7 @@
        "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23638</td>\n",
+       "      <td>24422</td>\n",
        "      <td>CAag_RU62</td>\n",
        "      <td>2</td>\n",
        "      <td>San Francisco Bay</td>\n",
@@ -571,7 +571,7 @@
        "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23639</td>\n",
+       "      <td>24423</td>\n",
        "      <td>CAag_RU63</td>\n",
        "      <td>6</td>\n",
        "      <td>San Joaquin River</td>\n",
@@ -583,7 +583,7 @@
        "      <th>7</th>\n",
        "      <td>7</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23640</td>\n",
+       "      <td>24424</td>\n",
        "      <td>CAag_RU64</td>\n",
        "      <td>4</td>\n",
        "      <td>South Coast</td>\n",
@@ -595,7 +595,7 @@
        "      <th>8</th>\n",
        "      <td>8</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23641</td>\n",
+       "      <td>24425</td>\n",
        "      <td>CAag_RU65</td>\n",
        "      <td>9</td>\n",
        "      <td>South Lahontan</td>\n",
@@ -607,7 +607,7 @@
        "      <th>9</th>\n",
        "      <td>9</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23642</td>\n",
+       "      <td>24426</td>\n",
        "      <td>CAag_RU66</td>\n",
        "      <td>7</td>\n",
        "      <td>Tulare Lake</td>\n",
@@ -621,16 +621,16 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            23633         CAag_RU57                     3   \n",
-       "1         1  Polygon            23634         CAag_RU58                    10   \n",
-       "2         2  Polygon            23635         CAag_RU59                     1   \n",
-       "3         3  Polygon            23636         CAag_RU60                     8   \n",
-       "4         4  Polygon            23637         CAag_RU61                     5   \n",
-       "5         5  Polygon            23638         CAag_RU62                     2   \n",
-       "6         6  Polygon            23639         CAag_RU63                     6   \n",
-       "7         7  Polygon            23640         CAag_RU64                     4   \n",
-       "8         8  Polygon            23641         CAag_RU65                     9   \n",
-       "9         9  Polygon            23642         CAag_RU66                     7   \n",
+       "0         0  Polygon            24417         CAag_RU57                     3   \n",
+       "1         1  Polygon            24418         CAag_RU58                    10   \n",
+       "2         2  Polygon            24419         CAag_RU59                     1   \n",
+       "3         3  Polygon            24420         CAag_RU60                     8   \n",
+       "4         4  Polygon            24421         CAag_RU61                     5   \n",
+       "5         5  Polygon            24422         CAag_RU62                     2   \n",
+       "6         6  Polygon            24423         CAag_RU63                     6   \n",
+       "7         7  Polygon            24424         CAag_RU64                     4   \n",
+       "8         8  Polygon            24425         CAag_RU65                     9   \n",
+       "9         9  Polygon            24426         CAag_RU66                     7   \n",
        "\n",
        "   ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
        "0      Central Coast   Hydrologic Region      CA   \n",
@@ -697,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
