--- a/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
@@ -67,32 +67,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>254</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>00-01-03</td>\n",
-       "      <td>Curlew Valley</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20733</td>\n",
+       "      <td>NM_C_1</td>\n",
+       "      <td>35001</td>\n",
+       "      <td>Bernalillo</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>255</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>000-01-03</td>\n",
-       "      <td>Clear Creek</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20734</td>\n",
+       "      <td>NM_C_2</td>\n",
+       "      <td>35003</td>\n",
+       "      <td>Catron</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>256</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>00-07-02</td>\n",
-       "      <td>Promontory Point</td>\n",
-       "      <td>Subarea</td>\n",
-       "      <td>UT</td>\n",
+       "      <td>20735</td>\n",
+       "      <td>NM_C_3</td>\n",
+       "      <td>35005</td>\n",
+       "      <td>Chaves</td>\n",
+       "      <td>County</td>\n",
+       "      <td>NM</td>\n",
        "      <td>EPSG:4326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -101,14 +101,14 @@
       ],
       "text/plain": [
        "   ReportingUnitID ReportingUnitUUID ReportingUnitNativeID ReportingUnitName  \\\n",
-       "0              254          00-01-03              00-01-03     Curlew Valley   \n",
-       "1              255         000-01-03             000-01-03       Clear Creek   \n",
-       "2              256          00-07-02              00-07-02  Promontory Point   \n",
+       "0            20733            NM_C_1                 35001        Bernalillo   \n",
+       "1            20734            NM_C_2                 35003            Catron   \n",
+       "2            20735            NM_C_3                 35005            Chaves   \n",
        "\n",
        "  ReportingUnitTypeCV StateCV EPSGCodeCV  \n",
-       "0             Subarea      UT  EPSG:4326  \n",
-       "1             Subarea      UT  EPSG:4326  \n",
-       "2             Subarea      UT  EPSG:4326  "
+       "0              County      NM  EPSG:4326  \n",
+       "1              County      NM  EPSG:4326  \n",
+       "2              County      NM  EPSG:4326  "
       ]
      },
      "execution_count": 2,
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "2  POLYGON ((-122.02221 42.00440, -121.94694 42.0...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -274,7 +274,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23643.0</td>\n",
+       "      <td>24427.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -286,7 +286,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23644.0</td>\n",
+       "      <td>24428.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -298,7 +298,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23645.0</td>\n",
+       "      <td>24429.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -312,9 +312,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon          23643.0         CAag_RU67              DAU00125   \n",
-       "1         1  Polygon          23644.0         CAag_RU68              DAU00147   \n",
-       "2         2  Polygon          23645.0         CAag_RU69              DAU00247   \n",
+       "0         0  Polygon          24427.0         CAag_RU67              DAU00125   \n",
+       "1         1  Polygon          24428.0         CAag_RU68              DAU00147   \n",
+       "2         2  Polygon          24429.0         CAag_RU69              DAU00247   \n",
        "\n",
        "  ReportingUnitName                ReportingUnitTypeCV StateCV  \\\n",
        "0        Lost River  Detailed Analysis Units by County      CA   \n",
@@ -327,7 +327,7 @@
        "2  POLYGON ((-122.02221 42.00440, -121.94694 42.0...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -417,7 +417,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23643.0</td>\n",
+       "      <td>24427.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -429,7 +429,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23644.0</td>\n",
+       "      <td>24428.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -441,7 +441,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23645.0</td>\n",
+       "      <td>24429.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -455,9 +455,9 @@
       ],
       "text/plain": [
        "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon          23643.0         CAag_RU67              DAU00125   \n",
-       "1         1  Polygon          23644.0         CAag_RU68              DAU00147   \n",
-       "2         2  Polygon          23645.0         CAag_RU69              DAU00247   \n",
+       "0         0  Polygon          24427.0         CAag_RU67              DAU00125   \n",
+       "1         1  Polygon          24428.0         CAag_RU68              DAU00147   \n",
+       "2         2  Polygon          24429.0         CAag_RU69              DAU00247   \n",
        "\n",
        "  ReportingUnitName                ReportingUnitTypeCV StateCV  \\\n",
        "0        Lost River  Detailed Analysis Units by County      CA   \n",
@@ -470,7 +470,7 @@
        "2  POLYGON ((-122.02221 42.00440, -121.94694 42.0...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23643.0</td>\n",
+       "      <td>24427.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -536,7 +536,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23644.0</td>\n",
+       "      <td>24428.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -548,7 +548,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23645.0</td>\n",
+       "      <td>24429.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -560,7 +560,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23646.0</td>\n",
+       "      <td>24430.0</td>\n",
        "      <td>CAag_RU70</td>\n",
        "      <td>DAU00347</td>\n",
        "      <td>Scott Valley</td>\n",
@@ -572,7 +572,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>23647.0</td>\n",
+       "      <td>24431.0</td>\n",
        "      <td>CAag_RU71</td>\n",
        "      <td>DAU00447</td>\n",
        "      <td>Shasta Valley</td>\n",
@@ -596,7 +596,7 @@
        "      <th>514</th>\n",
        "      <td>514</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24123.0</td>\n",
+       "      <td>24907.0</td>\n",
        "      <td>CAag_RU547</td>\n",
        "      <td>DAU40323</td>\n",
        "      <td>Upper Russian</td>\n",
@@ -608,7 +608,7 @@
        "      <th>516</th>\n",
        "      <td>516</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24124.0</td>\n",
+       "      <td>24908.0</td>\n",
        "      <td>CAag_RU548</td>\n",
        "      <td>DAU40423</td>\n",
        "      <td>Middle Russian</td>\n",
@@ -620,7 +620,7 @@
        "      <th>517</th>\n",
        "      <td>517</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24125.0</td>\n",
+       "      <td>24909.0</td>\n",
        "      <td>CAag_RU549</td>\n",
        "      <td>DAU40449</td>\n",
        "      <td>Middle Russian</td>\n",
@@ -632,7 +632,7 @@
        "      <th>518</th>\n",
        "      <td>518</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24126.0</td>\n",
+       "      <td>24910.0</td>\n",
        "      <td>CAag_RU550</td>\n",
        "      <td>DAU40523</td>\n",
        "      <td>Dry Creek</td>\n",
@@ -644,7 +644,7 @@
        "      <th>519</th>\n",
        "      <td>519</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24127.0</td>\n",
+       "      <td>24911.0</td>\n",
        "      <td>CAag_RU551</td>\n",
        "      <td>DAU40549</td>\n",
        "      <td>Dry Creek</td>\n",
@@ -659,17 +659,17 @@
       ],
       "text/plain": [
        "     OBJECTID    Shape  ReportingUnitID ReportingUnitUUID  \\\n",
-       "0           0  Polygon          23643.0         CAag_RU67   \n",
-       "1           1  Polygon          23644.0         CAag_RU68   \n",
-       "2           2  Polygon          23645.0         CAag_RU69   \n",
-       "3           3  Polygon          23646.0         CAag_RU70   \n",
-       "4           4  Polygon          23647.0         CAag_RU71   \n",
+       "0           0  Polygon          24427.0         CAag_RU67   \n",
+       "1           1  Polygon          24428.0         CAag_RU68   \n",
+       "2           2  Polygon          24429.0         CAag_RU69   \n",
+       "3           3  Polygon          24430.0         CAag_RU70   \n",
+       "4           4  Polygon          24431.0         CAag_RU71   \n",
        "..        ...      ...              ...               ...   \n",
-       "514       514  Polygon          24123.0        CAag_RU547   \n",
-       "516       516  Polygon          24124.0        CAag_RU548   \n",
-       "517       517  Polygon          24125.0        CAag_RU549   \n",
-       "518       518  Polygon          24126.0        CAag_RU550   \n",
-       "519       519  Polygon          24127.0        CAag_RU551   \n",
+       "514       514  Polygon          24907.0        CAag_RU547   \n",
+       "516       516  Polygon          24908.0        CAag_RU548   \n",
+       "517       517  Polygon          24909.0        CAag_RU549   \n",
+       "518       518  Polygon          24910.0        CAag_RU550   \n",
+       "519       519  Polygon          24911.0        CAag_RU551   \n",
        "\n",
        "    ReportingUnitNativeID ReportingUnitName  \\\n",
        "0                DAU00125        Lost River   \n",
@@ -713,7 +713,7 @@
        "[478 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
