--- a/CreateAppShapefiles/App2ShapeFiles_County.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_County.ipynb
@@ -231,16 +231,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# t1 = gpd.read_file('SourceFiles/Counties/WaDECounties.shp')\n",
+    "# t1.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rjame\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "<ipython-input-5-c9b940a1f14f>:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfs_1County_UT['ReportingUnitUUID'] = dfs_1County_UT.apply(lambda row: retrieveCountyName(row['NAME']), axis=1)\n"
      ]
     },
     {
@@ -341,7 +352,7 @@
        "2  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,18 +403,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rjame\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "<ipython-input-6-222c2f54ade9>:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfs_1County_NM['ReportingUnitUUID'] = dfs_1County_NM.apply(lambda row: retrieveUUID(row['NAME']), axis=1)\n"
      ]
     },
     {
@@ -504,7 +516,7 @@
        "2  POLYGON ((-105.72471 35.90021, -105.71861 35.9...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,24 +567,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rjame\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "<ipython-input-7-0d4bce889097>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  if __name__ == '__main__':\n",
-      "C:\\Users\\rjame\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:23: SettingWithCopyWarning: \n",
+      "  df_1RU_County_TX['ReportingUnitName'] = df_1RU_County_TX['ReportingUnitName'].str.title()\n",
+      "<ipython-input-7-0d4bce889097>:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfs_1County_TX['ReportingUnitUUID'] = dfs_1County_TX.apply(lambda row: retrieveUUID(row['NAME']), axis=1)\n"
      ]
     },
     {
@@ -673,7 +686,7 @@
        "2  POLYGON ((-98.58529 26.26027, -98.32067 26.783...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -829,7 +842,7 @@
        "2  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1109,7 @@
        "[316 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,13 +1122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the dataframe to a shapefile.\n",
     "# Note: rememeber that shapefiles autofil in fields names, will need to fix field names in app upload.\n",
-    "dfsOut = gpd.GeoDataFrame(outdf, geometry='geometry') # covert to geodataframe\n",
+    "dfsOut = gpd.GeoDataFrame(outdf, crs=\"EPSG:4326\", geometry='geometry') # covert to geodataframe\n",
     "dfsOut.to_file(\"Processed_Shapefiles/P_WaDECounties.shp\") # export shape file"
    ]
   },
@@ -1124,27 +1137,6 @@
    "metadata": {},
    "source": [
     "### Bonus Code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # retreive ReportingUnitName (to check results)\n",
-    "# ReportingUnitNamedict = pd.Series(df_1RU_County_CA.ReportingUnitName.values, index = df_1RU_County_CA.ReportingUnitName).to_dict()\n",
-    "# def retrieveCountyName(colrowValue):\n",
-    "#     if colrowValue == '' or pd.isnull(colrowValue):\n",
-    "#         outList = ''\n",
-    "#     else:\n",
-    "#         String1 = colrowValue\n",
-    "#         try:\n",
-    "#             outList = ReportingUnitNamedict[String1]\n",
-    "#         except:\n",
-    "#             outList = ''\n",
-    "#     return outList\n",
-    "# dfs_1County_CA['ReportingUnitName'] = dfs_1County_CA.apply(lambda row: retrieveCountyName(row['NAME']), axis=1)"
    ]
   }
  ],
@@ -1164,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
