--- a/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
@@ -732,7 +732,7 @@
    "source": [
     "# Export the dataframe to a shapefile.\n",
     "# Note: rememeber that shapefiles autofill in fields names, will need to fix field names in app upload.\n",
-    "dfsOut = gpd.GeoDataFrame(outdf, geometry='geometry') # covert to geodataframe\n",
+    "dfsOut = gpd.GeoDataFrame(outdf,  crs=\"EPSG:4326\", geometry='geometry') # covert to geodataframe\n",
     "dfsOut.to_file(\"Processed_Shapefiles/P_Custom_B.shp\") # export shape file"
    ]
   }
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
